--- a/app/src/main/res/layout/activity_request_maintenance.xml
+++ b/app/src/main/res/layout/activity_request_maintenance.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".employer.RequestMaintenanceActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Request Maintenance"
+        android:textStyle="bold"
+        android:textSize="25sp"/>
+    <EditText
+        android:id="@+id/edittext_requestmaintenance_sender"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
+        android:background="@drawable/designcorner"
+        android:hint="Email"
+        android:textColor="@color/design_default_color_primary"
+        android:textStyle="bold"
+        android:enabled="false"
+        android:textSize="18dp"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"/>
+
+    <EditText
+        android:id="@+id/edittext_requestmaintenance_subject"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
+        android:background="@drawable/designcorner"
+        android:hint="Subject"
+        android:textColor="@color/design_default_color_primary"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"/>
+
+    <EditText
+        android:layout_marginTop="15dp"
+        android:inputType="textMultiLine"
+        android:id="@+id/edittext_requestmaintenance_message"
+        android:background="@drawable/messagedesign"
+        android:padding="10dp"
+        android:ems="10"
+        android:imeOptions="actionDone"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:hint="Message"/>
+
+    <Button
+        android:id="@+id/btnsendrequestmaintenance"
+        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shapebutton"
+        android:text="Send"
+        android:layout_marginBottom="30dp"
+        android:textColor="#FFFFFF"/>
+
+</LinearLayout>
