--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,45 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/networkerecommendedjoberrorlayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:visibility="visible"
+        >
+
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_baseline_error_24"/>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:text="Network Error Please Reload Again"
+            android:gravity="left"
+            android:visibility="visible"
+            />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/tv_networkrecommendedjoberrorrefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:text="Refresh"
+            android:gravity="left"
+            android:visibility="visible"
+            />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/allerrorlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -70,6 +109,19 @@
             android:textColor="@color/design_default_color_primary"
             android:textSize="24sp" />
     </LinearLayout>
+
+<!--    <RelativeLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="20dp"-->
+<!--        android:layout_gravity="center">-->
+
+<!--&lt;!&ndash;        <ProgressBar&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/applicantrecommendedjob_loader"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="30dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="30dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:visibility="visible"/>&ndash;&gt;-->
+<!--    </RelativeLayout>-->
 
 
 </FrameLayout>
