--- a/app/src/main/res/layout/fragment_employer_job.xml
+++ b/app/src/main/res/layout/fragment_employer_job.xml
@@ -21,9 +21,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <SearchView
-                android:id="@+id/searchemployerjob"
-                android:queryHint="Seek"
+            <EditText
+                android:id="@+id/search"
+                android:hint="Search Here"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
