--- a/app/src/main/res/layout/activity_view_accept_reject_applicant.xml
+++ b/app/src/main/res/layout/activity_view_accept_reject_applicant.xml
@@ -15,6 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F0FF"
+    android:id="@+id/bruh"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".employer.ViewAcceptRejectApplicantActivity">
@@ -180,6 +181,19 @@
 
 
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:id="@+id/ln_loader"
+        android:layout_gravity="center">
+
+        <ProgressBar
+            android:id="@+id/applicantsavedjob_loader"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:visibility="visible"/>
+    </RelativeLayout>
     <RelativeLayout
         android:padding="15dp"
         android:layout_marginTop="10dp"
