--- a/app/src/main/res/layout/fragment_applicant_applied.xml
+++ b/app/src/main/res/layout/fragment_applicant_applied.xml
@@ -88,6 +88,51 @@
 
     </LinearLayout>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        android:visibility="invisible"
+        android:id="@+id/networkswipe">
+        <LinearLayout
+            android:id="@+id/networkjobsearcherrorlayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="visible"
+            >
+
+            <ImageView
+                android:layout_marginTop="20dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_baseline_error_24"/>
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:text="Network Error Please Reload Again"
+                android:gravity="left"
+                android:visibility="visible"
+                />
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/tv_networkjobsearcherrorrefresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="Refresh"
+                android:gravity="left"
+                android:visibility="visible"
+                />
+        </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 
 </FrameLayout>
