--- a/app/src/main/res/layout/fragment_employer_profile.xml
+++ b/app/src/main/res/layout/fragment_employer_profile.xml
@@ -126,6 +126,46 @@
             android:text=""
             android:gravity="left"/>
 
+        <LinearLayout
+            android:id="@+id/networkeducationerrorlayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="visible"
+            >
+
+            <ImageView
+                android:layout_marginTop="20dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_baseline_error_24"/>
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:text="Network Error Please Reload Again"
+                android:gravity="left"
+                android:visibility="visible"
+                />
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/tv_networkeducationerrorrefresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="Refresh"
+                android:gravity="left"
+                android:visibility="visible"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
