--- a/app/src/main/res/drawable/companyoverview.xml
+++ b/app/src/main/res/drawable/companyoverview.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1.3dp" android:color="#0d6e6a" />
+    <stroke android:width="1.3dp" android:color="@color/themecolor" />
     <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
 </shape>
