--- a/app/src/main/res/layout/activity_employer_registration.xml
+++ b/app/src/main/res/layout/activity_employer_registration.xml
@@ -11,6 +11,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:padding="20dp"
     tools:context=".tabregister.EmployerRegistrationActivity">
 
 
@@ -19,62 +20,138 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="For Approval"
-        android:textColor="#0d6e6a"
+        android:textColor="@color/themecolor"
         android:textSize="25dp"
         android:textStyle="bold"
         android:letterSpacing="0.03"/>
-
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_marginTop="30dp"
-        android:id="@+id/edittext_employer_name"
-        android:background="@drawable/forget"
-        android:padding="10dp"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="Company Name"/>
+        android:id="@+id/txtLayoutEmployerCompanyNameSignUp"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edittext_employer_name"
+            android:hint="Company Name"
+            android:defaultFocusHighlightEnabled="false"
+            android:inputType="text"
+            android:textSize="15sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <EditText-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:id="@+id/edittext_employer_name"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:padding="10dp"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="18dp"-->
+<!--        android:hint="Company Name"/>-->
     <TextView
-        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:padding="10dp"
+        android:hint="Email:"
+        />
+    <TextView
         android:id="@+id/txt_employer_email"
         android:padding="10dp"
-        android:background="@drawable/forget"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:textSize="15dp"
         android:hint="Email"
         />
-
-    <EditText
-        android:layout_marginTop="15dp"
-        android:id="@+id/txt_employer_address"
-        android:padding="10dp"
-        android:background="@drawable/forget"
-        android:layout_width="350dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="Address"
-        />
+        android:id="@+id/txtLayoutEmployerAddressSignUp"
+        >
 
-    <EditText
-        android:layout_marginTop="15dp"
-        android:id="@+id/edittext_employer_password"
-        android:background="@drawable/forget"
-        android:padding="10dp"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:inputType="textPassword"
-        android:hint="Password"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_employer_address"
+            android:hint="Address"
+            android:defaultFocusHighlightEnabled="false"
+            android:inputType="text"
+            android:textSize="15sp"/>
 
-    <EditText
-        android:layout_marginTop="15dp"
-        android:id="@+id/edittext_employer_confirmpassword"
-        android:background="@drawable/forget"
-        android:padding="10dp"
-        android:layout_width="350dp"
+    </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <EditText-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:id="@+id/txt_employer_address"-->
+<!--        android:padding="10dp"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="18dp"-->
+<!--        android:hint="Address"-->
+<!--        />-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="Confirm Password"/>
+        android:id="@+id/txtLayoutEmployerPasswordSignUp"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_height="wrap_content"
+            android:id="@+id/edittext_employer_password"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textSize="15sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtLayoutEmployerConfirmPasswordSignUp"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_height="wrap_content"
+            android:id="@+id/edittext_employer_confirmpassword"
+            android:hint="Confirm Password"
+            android:inputType="textPassword"
+            android:textSize="15sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <EditText-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:id="@+id/edittext_employer_password"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:padding="10dp"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="18dp"-->
+<!--        android:inputType="textPassword"-->
+<!--        android:hint="Password"/>-->
+
+<!--    <EditText-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:id="@+id/edittext_employer_confirmpassword"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:padding="10dp"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="18dp"-->
+<!--        android:hint="Confirm Password"/>-->
 
     <EditText
         android:layout_marginTop="15dp"
@@ -84,7 +161,7 @@
         android:padding="10dp"
         android:ems="10"
         android:imeOptions="actionDone"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:hint="Company Overview"/>
@@ -118,24 +195,34 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_gravity="left"
-        android:layout_marginLeft="30dp"
         android:text="By Clicking Send Button, You agree with our Privacy Policy and Terms of Conditions"
         android:textSize="18dp"/>
 
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnsendtoapproval"
-        android:layout_marginTop="10dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shapebutton"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/dialogloginbutton"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:text="Send"
-        android:layout_marginBottom="30dp"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFF"
+        android:textSize="15sp"
+        app:backgroundTint="@null"
+        />
+
+
+<!--    <Button-->
+<!--        android:id="@+id/btnsendtoapproval"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/shapebutton"-->
+<!--        android:text="Send"-->
+<!--        android:layout_marginBottom="30dp"-->
+<!--        android:textColor="#FFFFFF"/>-->
 
 
 </LinearLayout>
