--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:padding="20dp"
     android:gravity="center_horizontal">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/logo"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="#0d6e6a"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:letterSpacing="0.03"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Login"-->
+<!--        android:textColor="#0d6e6a"-->
+<!--        android:textSize="35dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:letterSpacing="0.03"/>-->
 
-    <EditText
-        android:id="@+id/edittext_email"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:hint="Email"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_marginTop="30dp"
-        android:paddingLeft="20dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtLayoutEmailSignIn"
+        >
 
-    <EditText
-        android:id="@+id/edittext_password"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:hint="Password"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edittext_email"
+            android:hint="Email"
+            android:defaultFocusHighlightEnabled="false"
+            android:inputType="textEmailAddress"
+            android:textSize="15sp"/>
 
-    <Button
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtLayoutPasswordSignIn"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:backgroundTint="#FFFFFF"
+            android:background="#FFFFFF"
+            android:layout_height="wrap_content"
+            android:id="@+id/edittext_password"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textSize="15sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <EditText-->
+<!--        android:id="@+id/edittext_email"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:hint="Email"-->
+<!--        android:textColor="#0d6e6a"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textSize="18dp"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:paddingLeft="20dp"/>-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/edittext_password"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:background="@drawable/forget"-->
+<!--        android:hint="Password"-->
+<!--        android:textColor="#0d6e6a"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textSize="18dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:paddingLeft="20dp"/>-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btnlogin"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:background="@drawable/button"-->
+<!--        android:text="Login"-->
+<!--        android:textSize="18dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="#FFF"-->
+<!--        android:layout_marginTop="20dp"/>-->
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnlogin"
-        android:layout_width="350dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/dialogloginbutton"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/button"
-        android:text="Login"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:text="Log in"
         android:textColor="#FFF"
-        android:layout_marginTop="20dp"/>
+        android:textSize="15sp"
+        app:backgroundTint="@null"
+        />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -76,7 +128,7 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:layout_toRightOf="@+id/txt_donthave"
-        android:textColor="#0d6e6a"
+        android:textColor="@color/design_default_color_primary"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="15dp"/>
@@ -88,7 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to Guest"
-        android:textColor="#0d6e6a"
+        android:textColor="@color/design_default_color_primary"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="15dp"/>
