--- a/app/src/main/res/layout/activity_view_job_to_save_recommended_applicant.xml
+++ b/app/src/main/res/layout/activity_view_job_to_save_recommended_applicant.xml
@@ -18,6 +18,14 @@
         android:textStyle="bold"
         android:textSize="25sp"/>
 
+    <include
+        android:layout_marginTop="80dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ln_nojobapplicantlayout"
+        layout="@layout/nojobapplicantlayout"
+        android:visibility="gone"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
