--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -22,6 +22,13 @@
             android:text="Recommended Applicants"
             android:textStyle="bold"
             android:textSize="25sp"/>
+        <include
+            android:layout_marginTop="40dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ln_norecommendedlayout"
+            layout="@layout/norecommendedlayout"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/networkerecommendedapperrorlayout"
