--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -5,11 +5,14 @@
         android:id="@+id/navigation_home"
         android:title="Home"/>
 <item
-    android:id="@+id/navigation_logout"
-    android:title="Logout"/>
+    android:id="@+id/navigation_testemail"
+    android:title="Email"/>
 
     <item
         android:id="@+id/navigation_savedjob"
         android:title="Saved Job"/>
+    <item
+        android:id="@+id/navigation_logout"
+        android:title="Logout"/>
 <!--    android:icon="@drawable/ic_baseline_person_24"/>-->
 </menu>
