--- a/app/src/main/res/layout/activity_edit_employer.xml
+++ b/app/src/main/res/layout/activity_edit_employer.xml
@@ -19,7 +19,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@color/design_default_color_primary_dark"
+        android:src="@drawable/shape"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
