--- a/app/src/main/res/layout/fragment_employer_profile.xml
+++ b/app/src/main/res/layout/fragment_employer_profile.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="-40dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@color/design_default_color_primary_dark"
+            android:src="@drawable/img"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:id="@+id/imgemployerprofile"
