--- a/app/src/main/res/layout/activity_edit_employer_jobs.xml
+++ b/app/src/main/res/layout/activity_edit_employer_jobs.xml
@@ -55,10 +55,12 @@
         android:id="@+id/tv_editaddjobemployerregion"
         android:background="#FFFFFF"
         android:padding="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
-        android:hint="Region"
+        android:text="Region"
         />
 
     <EditText
@@ -121,6 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
+
         android:layout_gravity="left"
         android:layout_marginLeft="8dp"
         android:text="Specialization"
@@ -136,10 +139,12 @@
         android:id="@+id/tv_editaddjobemployerspecialization"
         android:background="#FFFFFF"
         android:padding="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
-        android:hint="Specialization"
+        android:text="Specialization"
         />
 
     <Button
