--- a/app/src/main/res/layout/nojobapplicantlayout.xml
+++ b/app/src/main/res/layout/nojobapplicantlayout.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:text="Your Job Approved List Is Empty"
+            android:text="Your Applicant List Is Empty"
             android:gravity="left"
             android:textStyle="bold"
             android:visibility="visible"
