no item layout in pending applicant in employer side is complete

--- a/app/src/main/res/layout/activity_view_apply_applicant.xml
+++ b/app/src/main/res/layout/activity_view_apply_applicant.xml
@@ -4,7 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".employer.ViewApplyApplicantActivity">
+
+    <include
+        android:layout_marginTop="80dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ln_noapplicantsappliedlayout"
+        layout="@layout/noapplicantsappliedlayout"
+        android:visibility="gone"/>
+
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
@@ -25,5 +35,7 @@
         </LinearLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
